@@ -68,6 +68,8 @@ void FUShmRecoCell::clear()
 
 //______________________________________________________________________________
 void FUShmRecoCell::writeInitMsg(unsigned int   outModId,
+				 unsigned int   fuProcessId,
+				 unsigned int   fuGuid,
 				 unsigned char *data,
 				 unsigned int   dataSize)
 {
@@ -83,6 +85,8 @@ void FUShmRecoCell::writeInitMsg(unsigned int   outModId,
   runNumber_   =0xffffffff;
   evtNumber_   =0xffffffff;
   outModId_    =outModId;
+  fuProcessId_ =fuProcessId;
+  fuGuid_      =fuGuid;
   type_        =0;
   unsigned char* targetAddr=payloadAddr();
   memcpy(targetAddr,data,dataSize);
@@ -95,6 +99,8 @@ void FUShmRecoCell::writeEventData(unsigned int   rawCellIndex,
 				   unsigned int   runNumber,
 				   unsigned int   evtNumber,
 				   unsigned int   outModId,
+				   unsigned int   fuProcessId,
+				   unsigned int   fuGuid,
 				   unsigned char *data,
 				   unsigned int   dataSize)
 {
@@ -110,6 +116,8 @@ void FUShmRecoCell::writeEventData(unsigned int   rawCellIndex,
   runNumber_   =runNumber;
   evtNumber_   =evtNumber;
   outModId_    =outModId;
+  fuProcessId_ =fuProcessId;
+  fuGuid_      =fuGuid;
   type_        =1;
   unsigned char* targetAddr=payloadAddr();
   memcpy(targetAddr,data,dataSize);
@@ -121,6 +129,7 @@ void FUShmRecoCell::writeEventData(unsigned int   rawCellIndex,
 void FUShmRecoCell::writeErrorEvent(unsigned int   rawCellIndex,
 				    unsigned int   runNumber,
 				    unsigned int   evtNumber,
+				    unsigned int   fuProcessId,
 				    unsigned char *data,
 				    unsigned int   dataSize)
 {
@@ -136,6 +145,8 @@ void FUShmRecoCell::writeErrorEvent(unsigned int   rawCellIndex,
   runNumber_   =runNumber;
   evtNumber_   =evtNumber;
   outModId_    =0xffffffff;
+  fuProcessId_ =fuProcessId;
+  fuGuid_      =0;
   type_        =2;
   unsigned char* targetAddr=payloadAddr();
   memcpy(targetAddr,data,dataSize);
